<resources>
    <string name="app_name">BIZZ.IT</string>
    <string name="permit">Cannot get permission</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--    Auth Screen Text-->
    <string name="successlog">Login has been successful</string>
    <string name="successreg">Registration has been successful</string>
    <string name="check">Checkbox Terms and Privacy Policy can\'t be empty</string>
    <string name="login">Login</string>
    <string name="regist">Register</string>
    <string name="logGoogle">Login with Google</string>
    <string name="sublogin">Login to your account to continue!</string>
    <string name="subregist">Create your account to continue!</string>
    <string name="email">Enter your e-mail</string>
    <string name="name">Enter your full name</string>
    <string name="telf">Enter your telephone</string>
    <string name="pass">Enter your password</string>
    <string name="secpass">Re-enter your password</string>
    <string name="registAcc">I accept the Terms of Use &amp; Privacy Policy</string>
    <string name="txtLogin">Already have an account?</string>
    <string name="wait">Please wait for a moment…</string>
    <string name="or">OR</string>
    <string name="otphint">-</string>
    <string name="txtRegist">Don’t have an account?</string>
    <string name="verify">Verify</string>
    <string name="change">Change Email Address</string>
    <string name="otp">To continue, please enter the OTP code we’ve just sent to your e-mail</string>
    <string name="resendotp">Resend OTP</string>
    <string name="emptymail">Email cannot be empty</string>
    <string name="emptyname">Name cannot be empty</string>
    <string name="emptypass">Password cannot be empty</string>
    <string name="emptytelf">Telephone number cannot be empty</string>
    <string name="errormail">Input the correct e-mail format</string>
    <string name="errorpass">Password length must be more than 6</string>
    <string name="errorsecpass">Password is not the same. Check again</string>
    <string name="title_activity_progress_one">ProgressOne</string>

    <!--    Bottom Navigation Bar Text-->
    <string name="menu_home">Home</string>
    <string name="menu_history">Catalog</string>
    <string name="menu_camera">Scan</string>
    <string name="menu_class">Class</string>
    <string name="menu_profile">Profile</string>


    <!--    On Boarding Screen Text-->
    <string name="title_menu_1">Discover Franchise</string>
    <string name="title_menu_2">Acquire Franchise</string>
    <string name="title_menu_3">Learn Franchise</string>
    <string name="desc_menu_1">With our app, you can easily browse and explore an extensive list of franchises, all in one place. From fast-food chains to local businesses, we\'ve got you covered.</string>
    <string name="desc_menu_2">With our app, you can easily browse through a wide range of franchisors and initiate agreements without the hassle of paperwork and traditional negotiations.</string>
    <string name="desc_menu_3"> Dive into a vast library of engaging video content, packed with insightful lessons and real-world examples. Immerse yourself in the world of franchising through our courses.</string>
    <string name="start">Let\'s Start</string>

    <!--    Component Text-->
    <string name="placeholder_search">Search your franchise</string>
    <string name="idr">IDR</string>
    <string name="total_shop">Total Gerai :</string>
    <string name="shop">Toko</string>
    <string name="picture">Take a Picture</string>
    <string name="maintenance">This page is still under development, please wait patiently to get access to this feature. Thank You very much!</string>

    <!--    Detail Screen Text-->
    <string name="detail">Detail</string>
    <string name="seedoc">View Doc</string>
    <string name="downloaddoc">Download</string>
    <string name="agreementbtn">Make Agreement</string>
    <string name="totalshop">Total Shop</string>
    <string name="history"> %1s History</string>
    <string name="disclosuredoc">Franchise Disclosure</string>
    <string name="disclosuredetail">Franchise disclosure document is a document that includes information about the franchisor. This will gives you all the information you need to know.</string>
    <string name="step">Step by Step</string>
    <string name="stepdetail">
        1. Fill in the applicant\'s personal data form
        2.Submit a franchise acquisition application form
        3. Furthermore, Mixue will carry out evaluations related to outlets and so on.
        4. Signing of a contract approved by partners and Mixue Management will assist the shop decoration process.
        5. Partners receive theoretical and practical training related to store operations.</string>

    <!--    Agreement Screen Text-->
    <string name="agreement">Agreement</string>
    <string name="franchiseprofile">Franchisor Profile</string>
    <string name="franchisedetail">Please provide your full information</string>
    <string name="locationphoto">Location Photo</string>
    <string name="locationdetail">Please provide photo of place/spot for franchise</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="pricedetail">Please choose which package/price you want</string>
    <string name="date">Date of Birth</string>
    <string name="next">Next</string>
    <string name="take">Start Take a Photo</string>
    <string name="add">Add Picture</string>
    <string name="place">Place of Birth</string>
    <string name="location">Enter your location</string>
    <string name="guideline">Check Photo Guideline</string>
    <string name="photocheck">Face Photo Checker</string>
    <string name="errorphoto">Please take the picture first</string>
    <string name="doccheck">Document Agreement</string>
    <string name="doccheckdetail">Please check document agreement below and provide your digital signature in the box below</string>
    <string name="photocheckdetail">To continue, take a picture of your face. Please make sure the photo is not blur and according to photo guideline.</string>
    <string name="idcheck">ID Card Checker</string>
    <string name="idcheckdetail">To continue, take a picture of your official ID Card. Please make sure the photo is not blur and according to photo guideline.</string>
    <string name="title">SURAT PERJANJIAN WARALABA</string>
    <string name="suratnum">Nomor Surat: </string>
    <string name="opening2">Pada hari ini, telah dibuat dan ditanda tangani penawaran perjanjian waralaba Mixue. Yang bertanda tangan dibawah ini: \n\n</string>
    <string name="closing">Dalam hal ini bertindak sebagai pengaju untuk melakukan perjanjian dalam rangka mengakuisisi atau membeli waralaba yang ditawarkan. Demikianlah perjanjian ini dibuat dan ditandatangani oleh para pihak dalam keadaan sehat jasmani dan rohani tanpa adanya paksaan dari pihak manapun</string>
    <string name="town">Malang</string>
    <string name="opening">Dengan hormat, </string>

    <!--    Category Text-->
    <string name="category_fnb">F&amp;B</string>
    <string name="category_retail">Retail</string>
    <string name="category_education">Education</string>

    <!--    Home Screen Text-->
    <string name="section_live_track">Track you’re last request progress</string>
    <string name="section_category">Franchise you’re interested in</string>
    <string name="section_trending_franchises">Trending Franchise</string>

    <!--    Franchisor Screen Text-->
    <string name="franchisor">Become a Franchisor</string>
    <string name="start_registration">Start Registration</string>
    <string name="desc_franchisor">To offer a franchise, please register as a franchisor by completing the required information</string>
    <string name="franchise_information">Franchise Information</string>
    <string name="franchise_accepted">Franchise Accepted</string>
    <string name="desc_franchise_accepted">Thank you for participating in Bizz.It franchise industry. Your appliance will be checked by our team for 3x24 Hours. Please be patient</string>
    <string name="franchise_category">Franchise Category</string>
    <string name="franchise_name">Enter Franchise Name</string>
    <string name="franchise_logo">Franchise Logo</string>
    <string name="franchise_photo">Franchise Photo</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="desc_franchise_business">Describe your franchise business</string>
    <string name="disclosure">Franchise Disclosure Document</string>
    <string name="desc_disclosure">Please upload your own Franchise Disclosure Document. Please be mind that this document has to be original and consist of:</string>
    <string name="disc1">1. Financial (Return of Invesment)</string>
    <string name="disc2">2. Legal franchise history</string>
    <string name="disc3">3. Requirement that needed</string>
    <string name="disc4">4. Menu/option that being offered in franchise</string>
    <string name="requirements">Requirements</string>
    <string name="price_option">Price Option</string>
    <string name="desc_price_options">Please make price option that your franchise offer</string>
    <string name="package_name">Insert Package Name</string>
    <string name="price_package">Insert Package Price</string>
    <string name="support_file">Supported file: .pdf, .doc, .docx</string>

    <!--    Catalog Screen-->
    <string name="process">Process</string>
    <string name="reject">Reject</string>
    <string name="pending">Pending</string>
    <string name="info_process">Documents are being processed no later than D+7 after submission.</string>
    <string name="info_reject">There are several things that you need to revise.</string>
    <string name="info_pending">Document Submitted to the Franchisor.</string>
    <string name="submitted">Submitted: 22 May 2023</string>

    <string name="noaccount">Sorry, you haven\'t register. Please make an account first</string>
    <string name="no">Okay I Understand</string>
    <string name="yes">Sorry, I\'l do it later</string>
</resources>