<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/progress1"
        app:layout_constraintEnd_toStartOf="@+id/shapeableImageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="82dp"
        android:background="@drawable/progress2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/regist"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/subregist"
        android:textColor="?colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/worksans_regular"
        android:hint="@string/name"
        android:textColorHint="?colorTertiary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:startIconDrawable="@drawable/round_person_24"
        app:startIconTint="?colorTertiary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:inputType="textAutoComplete"
            android:saveEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/worksans_regular"
        android:hint="@string/email"
        android:textColorHint="?colorTertiary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:startIconDrawable="@drawable/round_email_24"
        app:startIconTint="?colorTertiary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:inputType="textAutoComplete"
            android:saveEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telf"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/worksans_regular"
        android:hint="@string/telf"
        android:textColorHint="?colorTertiary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:startIconDrawable="@drawable/round_call_24"
        app:startIconTint="?colorTertiary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telfInput"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:inputType="number"
            android:saveEnabled="true"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/worksans_regular"
        android:hint="@string/pass"
        android:textColorHint="?colorTertiary"
        android:textSize="14sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?colorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telf"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:startIconDrawable="@drawable/round_lock_24"
        app:startIconTint="?colorTertiary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passInput"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:inputType="textPassword"
            android:saveEnabled="true"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secPass"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/worksans_regular"
        android:hint="@string/secpass"
        android:textColorHint="?colorTertiary"
        android:textSize="14sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?colorTertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:startIconDrawable="@drawable/round_lock_24"
        app:startIconTint="?colorTertiary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secPassInput"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:inputType="textPassword"
            android:saveEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:button="@drawable/checkbox"
        android:fontFamily="@font/worksans_regular"
        android:textColor="?colorOnPrimary"
        android:text="@string/registAcc"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secPass" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/btnRegist"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/worksans_regular"
        android:text="@string/or"
        android:textColor="?colorOnPrimary"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/loginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegist" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginGoogle"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="?colorOnSecondary"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/logGoogle"
        android:textAllCaps="false"
        android:textColor="?colorTertiary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegist"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.TextInputLayout.Rounded"
        app:strokeColor="?colorTertiary"
        app:strokeWidth="2dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/worksans_regular"
        android:text="@string/txtLogin"
        android:textColor="?colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/login"
        android:textColor="?colorPrimaryVariant"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialTextView4" />
    

</androidx.constraintlayout.widget.ConstraintLayout>