<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="240dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="?colorSecondaryVariant"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/noaccount"
               android:fontFamily="@font/worksans_semibold"
               android:textSize="18sp"
               android:textAlignment="center"
               android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:fontFamily="@font/worksans_semibold"
                android:textSize="12sp"
                android:textColor="?colorOnSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:fontFamily="@font/worksans_semibold"
                android:textSize="12sp"
                android:textColor="?colorOnSecondary"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>